...
        android:layout_marginTop="8dp"
        android:text="Note"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/ET_note"
        android:layout_width="297dp"
        android:layout_height="62dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="40dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ET_category"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/ET_price" />

    <EditText
        android:id="@+id/ET_dateExpired"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/ET_datePurchased" />

    <EditText
        android:id="@+id/ET_price"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
...
        android:id="@+id/ET_datePurchased"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/ET_location" />

    <EditText
        android:id="@+id/ET_location"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/ET_quantity" />

    <EditText
        android:id="@+id/ET_quantity"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/ET_name" />

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginEnd="36dp"
...
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/saveBTN"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:onClick="onEditSaveClick"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/addMoreBTN"
        app:layout_constraintEnd_toEndOf="@+id/ET_note"
        app:layout_constraintTop_toTopOf="@+id/addMoreBTN" />

    <Button
        android:id="@+id/deleteBTN"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:onClick="onEditDeleteClick"
        android:text="Delete"
        app:layout_constraintStart_toStartOf="@+id/ET_note"
        app:layout_constraintTop_toBottomOf="@+id/ET_note" />

<Button
    android:id="@+id/addMoreBTN"
    android:layout_width="102dp"
...
